# ai-trip-planner

./: main.py  pyproject.toml  requirements.txt  vercel.json
config/: config.yaml
frontend/: index.html
tools/: expense_calculator_tool.py  place_search_tool.py
utils/: model_loader.py  place_info_search.py
