[project]
name = "ai-trip-planner"
version = "0.1.0"
description = "Trip planning agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.117.1",
    "uvicorn",
    "langchain",
    "langchain-community",
    "langgraph",
    "python-dotenv",
    "pydantic",
    "httpx",
    "requests",
    "langchain_tavily",
    "langchain_groq",
    "langchain_openai"
]
